Create work cards for portfolio webpage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
       </nav>
 
       <div class="front-section">
-        <h1 class="first-subsection">I’m Tacettin<br/> Glad to see you!</h1>
+        <h1 class="first-subsection">
+          I’m Tacettin<br />
+          Glad to see you!
+        </h1>
         <p class="second-subsection">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
@@ -86,174 +89,182 @@
         <ul>
           <li id="first-card-item" class="cards">
             <div id="snapshot1"></div>
-            <div class="card-header">
-              <h2 class="card-heading">Tonic</h2>
-              <ul class="card-list">
-                <li class="item client">CANOPY</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item role">Back End Dev</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item year">2015</li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p class="card-main">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <ul class="language-list">
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">html</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">css</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">javaScript</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="card-button">See Project</button>
+            <div class="card-body-container">
+              <div class="card-header">
+                <h2 class="card-heading">Tonic</h2>
+                <ul class="card-list">
+                  <li class="item client">CANOPY</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item role">Back End Dev</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item year">2015</li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <p class="card-main">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <ul class="language-list">
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">html</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">css</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">javaScript</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer">
+                <button type="button" class="card-button">See Project</button>
+              </div>
             </div>
           </li>
-          <li class="cards">
+          <li class="cards reverse-row">
             <div id="snapshot2"></div>
-            <div class="card-header">
-              <h2 class="card-heading">Multi-Post Stories</h2>
-              <ul class="card-list">
-                <li class="item client">CANOPY</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item role">Back End Dev</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item year">2015</li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p class="card-main">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <ul class="language-list">
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">html</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">css</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">javaScript</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="card-button">See Project</button>
+            <div class="card-body-container">
+              <div class="card-header">
+                <h2 class="card-heading">Multi-Post Stories</h2>
+                <ul class="card-list">
+                  <li class="item client">CANOPY</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item role">Back End Dev</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item year">2015</li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <p class="card-main">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <ul class="language-list">
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">html</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">css</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">javaScript</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer">
+                <button type="button" class="card-button">See Project</button>
+              </div>
             </div>
           </li>
           <li class="cards">
             <div id="snapshot3"></div>
-            <div class="card-header">
-              <h2 class="card-heading">Tonic</h2>
-              <ul class="card-list">
-                <li class="item client">CANOPY</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item role">Back End Dev</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item year">2015</li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p class="card-main">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <ul class="language-list">
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">html</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">css</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">javaScript</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="card-button">See Project</button>
+            <div class="card-body-container">
+              <div class="card-header">
+                <h2 class="card-heading">Tonic</h2>
+                <ul class="card-list">
+                  <li class="item client">CANOPY</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item role">Back End Dev</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item year">2015</li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <p class="card-main">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <ul class="language-list">
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">html</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">css</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">javaScript</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer">
+                <button type="button" class="card-button">See Project</button>
+              </div>
             </div>
           </li>
-          <li class="cards">
+          <li class="cards reverse-row">
             <div id="snapshot4"></div>
-            <div class="card-header">
-              <h2 class="card-heading">Multi-Post Stories</h2>
-              <ul class="card-list">
-                <li class="item client">CANOPY</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item role">Back End Dev</li>
-                <li class="circle">
-                  <img src="./utils/Counter.svg" alt="circle" />
-                </li>
-                <li class="item year">2015</li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p class="card-main">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <ul class="language-list">
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">html</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">css</p>
-                  </div>
-                </li>
-                <li class="language-item">
-                  <div class="language-container">
-                    <p class="language-text">javaScript</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="card-button">See Project</button>
+            <div class="card-body-container">
+              <div class="card-header">
+                <h2 class="card-heading">Multi-Post Stories</h2>
+                <ul class="card-list">
+                  <li class="item client">CANOPY</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item role">Back End Dev</li>
+                  <li class="circle">
+                    <img src="./utils/Counter.svg" alt="circle" />
+                  </li>
+                  <li class="item year">2015</li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <p class="card-main">
+                  A daily selection of privately personalized reads; no accounts
+                  or sign-ups required.
+                </p>
+                <ul class="language-list">
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">html</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">css</p>
+                    </div>
+                  </li>
+                  <li class="language-item">
+                    <div class="language-container">
+                      <p class="language-text">javaScript</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer">
+                <button type="button" class="card-button">See Project</button>
+              </div>
             </div>
           </li>
         </ul>
