Fix some layout problems

--- a/index.html
+++ b/index.html
@@ -371,50 +371,51 @@
       <div>
         <div class="footer-container">
           <div class="footer">
-            <div class="layer"></div>
-            <div class="contact-me-first">
-              <h2 class="contact-me-header">Contact me</h2>
-              <p class="contact-me-text">
-                If you have an application you are interested in developing, a
-                feature that you need built or a project that needs coding. I’d
-                love to help with it
-              </p>
-            </div>
-            <div class="form-container">
-              <form
-                action="https://formspree.io/f/mdoyznbe"
-                method="post"
-                class="form-list"
-              >
-                <input
-                  type="text"
-                  class="fname"
-                  name="fname"
-                  placeholder="Name-Surname"
-                  maxlength="30"
-                  required
-                />
+            <div class="layer">
+              <div class="contact-me-first">
+                <h2 class="contact-me-header">Contact me</h2>
+                <p class="contact-me-text">
+                  If you have an application you are interested in developing, a
+                  feature that you need built or a project that needs coding.
+                  I’d love to help with it
+                </p>
+              </div>
+              <div class="form-container">
+                <form
+                  action="https://formspree.io/f/mdoyznbe"
+                  method="post"
+                  class="form-list"
+                >
+                  <input
+                    type="text"
+                    class="fname"
+                    name="fname"
+                    placeholder="Name-Surname"
+                    maxlength="30"
+                    required
+                  />
 
-                <input
-                  type="email"
-                  class="fname"
-                  name="email"
-                  placeholder="E-mail"
-                  id="email-input"
-                  required
-                />
+                  <input
+                    type="email"
+                    class="fname"
+                    name="email"
+                    placeholder="E-mail"
+                    id="email-input"
+                    required
+                  />
 
-                <textarea
-                  name="message"
-                  maxlength="500"
-                  placeholder="Write your message here"
-                  required
-                ></textarea>
+                  <textarea
+                    name="message"
+                    maxlength="500"
+                    placeholder="Write your message here"
+                    required
+                  ></textarea>
 
-                <button type="submit" class="contact-me-button">
-                  Get It Touch
-                </button>
-              </form>
+                  <button type="submit" class="contact-me-button">
+                    Get It Touch
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
