--- a/index.html
+++ b/index.html
@@ -46,19 +46,21 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo-heading">
-          <a href="#" class="my-logo">My Logo</a>
-        </div>
-        <a title="menu" href="#" class="hamburger-menu">
-          <i class="fa fa-bars"></i>
-        </a>
-        <div class="nav-menu">
-          <a title="portfolio" href="#" class="nav-menu-link">Portfolio</a>
-          <a title="about" href="#" class="nav-menu-link">About</a>
-          <a title="contact" href="#" class="nav-menu-link">Contact</a>
-        </div>
-      </nav>
+      <div class="fixed">
+        <nav>
+          <div class="logo-heading">
+            <a href="#" class="my-logo">My Logo</a>
+          </div>
+          <a title="menu" href="#" class="hamburger-menu">
+            <i class="fa fa-bars"></i>
+          </a>
+          <div class="nav-menu">
+            <a title="portfolio" href="#" class="nav-menu-link">Portfolio</a>
+            <a title="about" href="#" class="nav-menu-link">About</a>
+            <a title="contact" href="#" class="nav-menu-link">Contact</a>
+          </div>
+        </nav>
+      </div>
       <div class="front-section">
         <h1 class="first-subsection">
           I’m Tacettin<br />
