Add links to navbar options

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <i class="fa fa-bars"></i>
           </a>
           <div class="nav-menu">
-            <a title="portfolio" href="#" class="nav-menu-link">Portfolio</a>
-            <a title="about" href="#" class="nav-menu-link">About</a>
-            <a title="contact" href="#" class="nav-menu-link">Contact</a>
+            <a title="portfolio" href="#works" class="nav-menu-link">Portfolio</a>
+            <a title="about" href="#about-me" class="nav-menu-link">About</a>
+            <a title="contact" href="#contact-with-me" class="nav-menu-link">Contact</a>
           </div>
         </nav>
       </div>
@@ -390,7 +390,7 @@
           </div>
         </div>
       </div>
-      <div>
+      <div id="contact-with-me">
         <div class="footer-container">
           <div class="footer">
             <div class="layer">
