--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="nav-menu">
           <a title="portfolio" href="#works" class="nav-menu-link">Portfolio</a>
           <a title="about" href="#about-me" class="nav-menu-link">About</a>
-          <a title="contact" href="#contact-with-me" class="nav-menu-link"
+          <a title="contact" href="#contact-with-me" class="nav-menu-link" id="contact-padding"
             >Contact</a
           >
         </div>
