Create toggle for opening hamburger menu

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </a>
         <div class="is-open">
           <div class="nav-menu">
+            <a title="close" href="#close-menu" class="nav-menu-link close-menu"><i class="fas fa-times"></i></a>
             <a title="portfolio" href="#works" class="nav-menu-link"
               >Portfolio</a
             >
