Add menu button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <div class="logo-heading">
           <a href="#" class="my-logo">My Logo</a>
         </div>
-
+        <a title="menu" href="#" class="hamburger-menu">
+          <i class="fa fa-bars"></i>
+        </a>
         <div class="is-open">
           <div class="nav-menu">
             <a title="close" href="#" class="nav-menu-link close-menu"
