--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         <div class="logo-heading">
           <a href="#" class="my-logo">My Logo</a>
         </div>
-
+        <a title="menu" href="#" class="hamburger-menu">
+          <i class="fa fa-bars"></i>
+        </a>
         <div class="is-open">
+          <div class="blurred-bg"></div>
           <div class="nav-menu">
             <a title="close" href="#" class="nav-menu-link close-menu"
               ><i class="fas fa-times"></i
