Create first part of card popup

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
         </ul>
       </div>
     </header>
+    <section class="popup">
+      <div class="cardPopup">
+
+      </div>
+    </section>
     <section id="works">
       <div>
         <ul>
