Complete mobile  version of popups

--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
     </header>
     <section class="popup">
       <div class="cardPopup">
-
       </div>
     </section>
     <section id="works">
@@ -165,7 +164,7 @@
                 </ul>
               </div>
               <div class="card-footer">
-                <button type="button" class="card-button">See Project</button>
+                <button type="button" class="card-button 0">See Project</button>
               </div>
             </div>
           </li>
@@ -210,7 +209,7 @@
                 </ul>
               </div>
               <div class="card-footer">
-                <button type="button" class="card-button">See Project</button>
+                <button type="button" class="card-button 1">See Project</button>
               </div>
             </div>
           </li>
@@ -255,7 +254,7 @@
                 </ul>
               </div>
               <div class="card-footer">
-                <button type="button" class="card-button">See Project</button>
+                <button type="button" class="card-button 2">See Project</button>
               </div>
             </div>
           </li>
@@ -300,7 +299,7 @@
                 </ul>
               </div>
               <div class="card-footer">
-                <button type="button" class="card-button">See Project</button>
+                <button type="button" class="card-button 3">See Project</button>
               </div>
             </div>
           </li>
