Add desktop popups

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
       </div>
     </header>
     <section class="popup">
-      <div class="cardPopup">
-      </div>
+      <div class="cardPopup"></div>
     </section>
     <section id="works">
       <div>
