Equalize right and left margins of cards

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
     <section id="works">
       <div>
-        <ul>
+        <ul class="works-ul">
           <li id="first-card-item" class="cards">
             <div id="snapshot1"></div>
             <div class="card-body-container">
