Set up environment

--- a/handlePopups.html
+++ b/handlePopups.html
@@ -457,6 +457,7 @@
         </div>
       </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="handlePopups.js"></script>
+    <script src="handleForms.js"></script>
   </body>
 </html>
