Transform content of email

--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
                     placeholder="E-mail"
                     id="email-input"
                     required
+                    pattern="^[a-z]+$"
                   />
 
                   <textarea
