Add alert for uppercase letters in the email

--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
                     required
                   />
 
+                  <small class="alert-message"></small>
                   <input
                     type="email"
                     class="fname"
@@ -438,7 +439,6 @@
                     placeholder="E-mail"
                     id="email-input"
                     required
-                    pattern="^[a-z]+$"
                   />
 
                   <textarea
